--- a/src/app/generatetoken/generatetoken.component.html
+++ b/src/app/generatetoken/generatetoken.component.html
@@ -38,7 +38,8 @@
 
         <h2 id="token">Generating Token</h2>
         <p>Generate Token using REST client i;e POSTMAN. The endpoint to use for this would be
-          <code class="highlighter-rouge">generateAuthenticationToken</code> and is valid for one hour from the time it was generated.</p>
+          <code class="highlighter-rouge">generateAuthenticationToken</code> and is valid for one hour from the time it
+          was generated.</p>
         <p><img src="../../assets/img/components/token/gentoken.png" alt="Token Generation Sample" />
         </p>
 
@@ -64,7 +65,7 @@
         <p><img src="../../assets/img/components/token/invalidapp.png" alt="app_name wrong" />
         </p>
         <p>and perform search hitting the send. Make sure you're using the right endpoint i;e <code
-              class="highlighter-rouge">search</code></p>
+            class="highlighter-rouge">search</code></p>
         <p><img src="../../assets/img/components/token/invalidroles.png" alt="roles are wrong" />
         </p>
 
