--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -39,16 +39,16 @@
             for a subject search when you do not know the standard subject heading. It may
             also be used as a substitute for user input as search when you have incomplete
             details about the information you're seeking.</li>
-            <li><a routerLink="/searchterm"><code class="highlighter-rouge">search_term</code></a></li>
+          <li><a routerLink="/searchterm"><code class="highlighter-rouge">search_term</code></a></li>
           <li><a routerLink="/refinedby"><code class="highlighter-rouge">refined_by</code></a></li>
           <li><a routerLink="/advancesearch"><code class="highlighter-rouge">advanced_search</code></a></li>
         </ul>
 
         <h2 id="params">Search Parameters</h2>
         <p>The following types of search parameters can be used within a JSON <code
-              class="highlighter-rouge">search</code> request.
-          To perform a particular search, application specific<code
-              class="highlighter-rouge">tokens</code> are required to pass within the
+            class="highlighter-rouge">search</code> request.
+          To perform a particular search, application specific<code class="highlighter-rouge">tokens</code> are required
+          to pass within the
           <code class="highlighter-rouge">headers</code></p>
         <ul>
           <li><a href="#"><code class="highlighter-rouge">page_size</code></a></li>
