--- a/src/app/types/types.component.html
+++ b/src/app/types/types.component.html
@@ -128,7 +128,8 @@
         <!---->
 
         <h2 id="advancesrch">5. Advance Search</h2>
-        <p>The advanced_search can be of exact type or full text search type enable you to search by fields.For example when you want to search provided text in particular fields, then advance search is used.</p>
+        <p>The advanced_search can be of exact type or full text search type enable you to search by fields.For example
+          when you want to search provided text in particular fields, then advance search is used.</p>
         <h3>Using advance_search</h3>
         <p>In order to perform search using search_term, you must have a valid JWT Token and search_keyword has to be
           sent in as body parameter. JWT token can be generated using <a routerLink="/generatetoken"><code
