--- a/src/app/updatemappings/updatemappings.component.html
+++ b/src/app/updatemappings/updatemappings.component.html
@@ -19,7 +19,7 @@
         <p>The update mappings API provides the users/developers to define mappings and settings for a index on
           elasticsearch to save data in the preffered pattern.
           <code class="highlighter-rouge">Elasticsearch</code> will automatically create an index (reading settings and
-          mappings from <code class="highlighter-rouge">configuration</code> file) for you if you're using this API.
+          mappings from <code class="highlighter-rouge">configuration</code> file) for you if you're using this API.</p>
 
 
           <h2 id="requisites">Prerequisites</h2>
