--- a/src/app/revoketoken/revoketoken.component.html
+++ b/src/app/revoketoken/revoketoken.component.html
@@ -25,12 +25,12 @@
 
         <h2 id="requisites">Prerequisites</h2>
         <p>To revoke a access_token, an <a routerLink="/generatetoken"><code
-          class="highlighter-rouge">access_token</code></a> and followings are the must have resources</p>
-    <ul>
+              class="highlighter-rouge">access_token</code></a> and followings are the must have resources</p>
+        <ul>
           <li><strong>Client - </strong> REST clients are applications capable to consume and
             operate with resources exposed by RESTful servers.</li>
-          <li><strong>Endpoint - </strong>The endpoint <code
-                class="highlighter-rouge">revoketoken</code> to initiate the revoke
+          <li><strong>Endpoint - </strong>The endpoint <code class="highlighter-rouge">revoketoken</code> to initiate
+            the revoke
             service</li>
           <li><strong>Access Token - </strong>A valid JWT token that is being used to access
             the application with security.</li>
