--- a/src/app/types/types.component.html
+++ b/src/app/types/types.component.html
@@ -143,7 +143,7 @@
         </div><br />
         <h4>JSON Response</h4><br />
 
-        <p>While hitting the search Endpoint, the following response will be generated</p>
+        <p>When hitting the search Endpoint, the following response will be generated</p>
         <div class="highlighter-rouge">
           <div class="highlight">
             <ngx-json-viewer [json]="advcsrchresp"></ngx-json-viewer>
