minor changes in home

--- a/src/app/generatetoken/generatetoken.component.html
+++ b/src/app/generatetoken/generatetoken.component.html
@@ -24,7 +24,7 @@
           signed or integrity protected with a Message Authentication Code
           (MAC) and/or encrypted.</p>
 
-        <h2 id="requisites">Prerequisites</h2>
+        <h2 id="requisites">Prerequisite</h2>
         <p>To perform an empty search, followings steps needs to be done</p>
         <ul>
           <li><strong>Client - </strong> REST clients are applications capable to consume and
