--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -166,10 +166,10 @@
     </div>
 </div>
 </div>-->
-<div class="question">
+<!-- <div class="question">
     <div class="question__tit">Didn’t find what you were looking for?</div>
     <div class="buttons">
         <a href="mailto:skashyap@oceaneering.com" class="button">Contact Support</a>
     </div>
-</div>
+</div> -->
 <div class="footer__spacer"></div>
