--- a/src/app/updatemappings/updatemappings.component.html
+++ b/src/app/updatemappings/updatemappings.component.html
@@ -22,7 +22,7 @@
           mappings from <code class="highlighter-rouge">configuration</code> file) for you if you're using this API.</p>
 
 
-          <h2 id="requisites">Prerequisites</h2>
+          <h2 id="requisites">Prerequisite</h2>
           <p>To use Update Mappings API, an <a routerLink="/generatetoken"><code
                 class="highlighter-rouge">access_token</code></a> and followings are the must have resources</p>
           <ul>
