--- a/src/app/revoketoken/revoketoken.component.html
+++ b/src/app/revoketoken/revoketoken.component.html
@@ -23,7 +23,7 @@
           initiates the <code class="highlighter-rouge">revoketoken</code> and
           deletes the particular token from elasticsearch index</p>
 
-        <h2 id="requisites">Prerequisites</h2>
+        <h2 id="requisites">Prerequisite</h2>
         <p>To revoke a access_token, an <a routerLink="/generatetoken"><code
               class="highlighter-rouge">access_token</code></a> and followings are the must have resources</p>
         <ul>
